--- a/conf/supervisor.conf
+++ b/conf/supervisor.conf
@@ -6,6 +6,8 @@ pidfile=/var/run/supervisord.pid
 
 [program:php]
 command=/usr/bin/php /var/www/html/supervisor.php 
+autostart=true
+autorestart=true
 environment=A="1"
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
